--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -40,7 +40,7 @@
         android:gravity="center"
         android:textSize="20dp"
         android:textColor="#ffffff"
-        android:text="BEST FRIEND IN THE GYM TO GUIDE"/>
+        android:text="BESTFRIEND IN THE GYM TO GUIDE"/>
 
 
 
