--- a/Gym_Guide_app/app/src/main/res/layout/activity_workouts.xml
+++ b/Gym_Guide_app/app/src/main/res/layout/activity_workouts.xml
@@ -1,33 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_exercises"
+    android:id="@+id/activity_workouts"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.ravikumarpatel.gym_guide_app.Exercises">
-
-    <ScrollView
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
-
-<ListView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:id="@+id/list"
-    android:dividerHeight="10dp"
-    android:divider="@null"
-    >
-
-
-
-
-
-</ListView>
-
-    </ScrollView>
+    tools:context="com.example.ravikumarpatel.gym_guide_app.Workouts">
 
 </RelativeLayout>
