--- a/Gym_Guide_app/app/src/main/res/layout/content_main.xml
+++ b/Gym_Guide_app/app/src/main/res/layout/content_main.xml
@@ -65,7 +65,7 @@
             <Button
                 android:layout_width="240dp"
                 android:layout_height="45dp"
-                android:background="#008080"
+                android:background="#f44336"
                 android:text="EXERCISES"
                 android:textSize="20dp"
                 android:clickable="true"
@@ -78,7 +78,7 @@
                 android:textSize="20dp"
                 android:layout_marginTop="10dp"
                 android:layout_below="@+id/exercise"
-                android:background="#008080"
+                android:background="#f44336"
                 android:text="WORKOUTS"
                 android:clickable="true"
                 android:id="@+id/workout"
