--- a/Gym_Guide_app/app/src/main/res/layout/activity_exercises.xml
+++ b/Gym_Guide_app/app/src/main/res/layout/activity_exercises.xml
@@ -43,7 +43,7 @@
                             android:layout_height="120dp"
                             android:text="ABDOMINAL"
                             android:gravity="center"
-                            android:textSize="20dp"
+                            android:textSize="15dp"
                             android:textColor="#000"
                             />
 
@@ -78,7 +78,7 @@
                             android:layout_height="120dp"
                             android:text="BACK"
                             android:gravity="center"
-                            android:textSize="20dp"
+                            android:textSize="15dp"
                             android:textColor="#000"
                             />
 
@@ -106,7 +106,7 @@
                         <ImageView
                             android:layout_width="120dp"
                             android:layout_height="120dp"
-                            android:src="@drawable/biceps"
+                            android:src="@drawable/biceps_best"
 
                             />
                         <TextView
@@ -114,7 +114,7 @@
                             android:layout_height="120dp"
                             android:text="BICEPS"
                             android:gravity="center"
-                            android:textSize="20dp"
+                            android:textSize="15dp"
                             android:textColor="#000"
                             />
 
@@ -149,7 +149,7 @@
                             android:layout_height="120dp"
                             android:text="CHEST"
                             android:gravity="center"
-                            android:textSize="20dp"
+                            android:textSize="15dp"
                             android:textColor="#000"
                             />
 
@@ -184,7 +184,7 @@
                             android:layout_height="120dp"
                             android:text="LEGS"
                             android:gravity="center"
-                            android:textSize="20dp"
+                            android:textSize="15dp"
                             android:textColor="#000"
                             />
 
@@ -220,7 +220,7 @@
                             android:layout_height="120dp"
                             android:text="SHOULDERS"
                             android:gravity="center"
-                            android:textSize="20dp"
+                            android:textSize="15dp"
                             android:textColor="#000"
                             />
 
@@ -258,7 +258,7 @@
                             android:layout_height="120dp"
                             android:text="TRICEPS"
                             android:gravity="center"
-                            android:textSize="20dp"
+                            android:textSize="15dp"
                             android:textColor="#000"
                             />
 
@@ -297,7 +297,7 @@
                             android:layout_height="120dp"
                             android:text="STRETCHING"
                             android:gravity="center"
-                            android:textSize="20dp"
+                            android:textSize="15dp"
                             android:textColor="#000"
                             />
 
